bynkc/tests/fixtures/negative/230_refinement_cycle/src/demo.bynk
context demo

actor A = B where hasClaim("x")
actor B = A where hasClaim("y")

service api from http {
  on GET("/x") () -> Effect[HttpResult[String]] by a: A {
    Ok("x")
  }
}
